--- a/project-details.html
+++ b/project-details.html
@@ -300,6 +300,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/javascripts/main.js"></script>
+  <script src="assets/js/projects.js"></script>
 
 </body>
 
