--- a/project-details.html
+++ b/project-details.html
@@ -270,13 +270,15 @@
                 </div>
                 <div class="col-xl-6 col-lg-6 d-none d-lg-block">
                     <div class="footer-menu text-right">
-                        <ul>
-                            <li><a href="index-2.html">Home</a></li>
-                            <li><a href="terms.html">Terms</a></li>
-                            <li><a href="policy.html">Privacy</a></li>
-                            <li><a href="policy.html">Policy</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                        </ul>
+                      <div class="footer-menu text-right">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="policy.html">Conoceme</a></li>
+                        <li><a href="projects.html">Porducto Wake Up</a></li>
+                        <li><a href="services.html">Mentorias</a></li>
+                        <li><a href="blogs.html">Testimonios</a></li>
+                        <li><a href="contact.html">Contacto</a></li>
+                        <li><a href="dino/dinosaurius.html">Juego</a></li>
+                      </div>
                     </div>
                 </div>
             </div>
