--- a/services.html
+++ b/services.html
@@ -246,14 +246,15 @@
                 </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 d-none d-lg-block">
-                    <div class="footer-menu text-right">
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="projects.html">Porducto Wake Up</a></li>
-                      <li><a href="services.html">Mentorias</a></li>
-                      <li><a href="blogs.html">Testimonios</a></li>
-                      <li><a href="contact.html">Contacto</a></li>
-                      <li><a href="dino/dinosaurius.html">Juego</a></li>
-                    </div>
+                  <div class="footer-menu text-right">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="policy.html">Conoceme</a></li>
+                    <li><a href="projects.html">Porducto Wake Up</a></li>
+                    <li><a href="services.html">Mentorias</a></li>
+                    <li><a href="blogs.html">Testimonios</a></li>
+                    <li><a href="contact.html">Contacto</a></li>
+                    <li><a href="dino/dinosaurius.html">Juego</a></li>
+                  </div>
                 </div>
             </div>
         </div>
